# mlas

./: .gitignore  CMakeLists.txt  README.md
inc/: mlas.h
lib/: activate.cpp  mlasi.h  platform.cpp
test/: common.h  conv2d.h  gen_data.py  test_conv2d.cc  test_sgemm.cc  util.h
